--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,2 @@
 <a href="/auth/instagram">Login with Instagram</a>
+<a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
