--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -12,17 +12,21 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
       <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="assets/fb.css">
+      <link rel="stylesheet" type="text/css" href="assets/ig.css">
+
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+      <link rel="import" href="components/paper-card.html">
 </head>
 
 <body>
-
     {{{body}}}    
-    
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
 </body>
 </html>
 
