--- a/views/facebookaccount.handlebars
+++ b/views/facebookaccount.handlebars
@@ -3,3 +3,7 @@ hello accounts
 <p>Name:{{user.displayName}}</p>
 <p>Gender: {{user.gender}}</p>
 <p>Song: {{data.song}} </p>
+{{#each data.posts}}
+  <img src="{{picture}}" class="img-responsive" class="img hashtag-img">
+  <p>{{message}}</p>
+{{/each}}
