--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,6 +22,7 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="js/bootstrap.js"></script>
       <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+      <script src="js/eventhandler.js"></script>
       <link rel="import" href="components/paper-card.html">
 </head>
 
