--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -1,21 +1,12 @@
- <div class="igContainer">
-	<div class="titlelabel">
-		<p>drake</p>
-	</div>
+<div class="titlelabel">	
+	<p>drake x {{user}}</p>
+</div>
+<div class="igContainer">
 	{{#each photos}}
-	 <!--
-		<p>Author: {{author}}</p>
-	  <img src="{{url}}" class="img-responsive" class="img hashtag-img">
-	  <p>{{caption}}</p>
-	  -->
-	  	<div class="igItem">
-	  		<paper-card enableHover="true" overlayImage="{{url}}" style="width:300px; height:300px;" onmouseover="onMouseOver(this)" onmouseout="onMouseLeave(this)" id="card_{{id}}"></paper-card>
-	  		<div class="label" id="label_{{id}}" style="visibility:hidden">
-	  			<div class="card">
-	  				<p>{{caption}}</p>
-	  			</div>
-	  		</div>
-	  	</div>
+	<div class="igItem">
+			<paper-card enableHover="true" overlayImage="{{url}}" style="width:350px; height:auto;" id="card_{{id}}" caption="{{caption}}" ></paper-card>
+		</div>
+	</div>
 	{{/each}}
 </div>
 
