--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -1,6 +1,9 @@
 <div class="titlelabel">	
 	<p>drake x {{user}}</p>
 </div>
+<div class="subtitle">
+	<p>Based on you're recent posts, you're Drake song is: </p>
+</div>
 <div class="igContainer">
 	{{#each photos}}
 	<div class="igItem">
