--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Assignment 1</title>	
+	<title>Drakify</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -19,6 +19,7 @@
       <link rel="stylesheet" type="text/css" href="assets/fb.css">
       <link rel="stylesheet" type="text/css" href="assets/ig.css">
       <link rel="stylesheet" type="text/css" media="all" href="css/navbar.css">
+      <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-social/bootstrap-social.css">
 
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="js/bootstrap.js"></script>
