--- a/assets/ig.css
+++ b/assets/ig.css
@@ -3,6 +3,36 @@
 	src: url("Drake-Neue-Regular.otf") format("opentype");
 }
 
+/* Login */
+.logincontent{
+	margin-top: 10%;
+	margin-right:auto;
+	margin-left: auto;
+	text-align: center;
+}
+
+.loginbuttons{
+	max-width: 25em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.btn-facebook {
+	margin-bottom: 0.5em;
+}
+
+.loginintro{
+	font-family: 'Kalam', 'Trebuchet MS', sans-serif;
+  font-size: 8em;
+}
+
+.loginsubtitle{
+	font-family: 'Open Sans';
+	font-size: 1.5em;
+}
+
+/* Instagram */
 #global{
 	background-color: #e9eaed;
 	padding-top: 10px;
@@ -11,7 +41,7 @@
 #mainContainer{
   margin-left: auto;
   margin-right: auto;
-  margin-top: 13em;
+  margin-top: 11em;
   border-radius: 3px;
   width: 650px;
   max-width: 940px;
@@ -70,14 +100,21 @@
 	font-size: 3em;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	font-weight: bold;
 }
 
 #songheader{
 	background-color: white;
-	color: #4e5f81;
+	color: #333;
 	font-size: 17px;
 	font-family: 'Open Sans', sans-serif;
 	padding-bottom: 10px;
+	font-weight: bold;
+}
+
+#spanheader{
+	font-size:20px;
+	color: #4e5f81;
 }
 
 #drakeimg{
@@ -91,3 +128,32 @@
 	text-align: center;
 }
 
+.popover.right{
+	margin-left: 15%;
+	color:white;
+	background-color: #4e5f81;
+	font-size: 1.7em;
+  font-family: 'Open Sans';
+  padding: 5px;
+  opacity: 0.95;
+
+}
+
+.popover.right > .arrow:after {
+	border-right-color: #4e5f81;
+}
+
+.tooltip.right{
+	font-size: 1.7em;
+	font-family: 'Open Sans';
+	margin-left: 1em;
+}
+
+.tooltip.right .tooltip-arrow {
+	border-right-color: #4e5f81;
+}
+
+.tooltip-inner {
+	background-color: #4e5f81;
+	padding: 10px;
+}
