--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,2 +1,14 @@
-<a href="/auth/instagram">Login with Instagram</a>
-<a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+<div class="loginwrapper">
+	<div class="logincontent">
+		<div class="loginintro">Drakify</div>
+		<div class="loginsubtitle">Find out which Drake song you are</div>
+		<div class="loginbuttons">
+			<a class="btn btn-block btn-social btn-facebook" href="/auth/facebook">
+				<i class="fa fa-facebook"></i> Sign in with Facebook
+			</a>
+			<a class="btn btn-block btn-social btn-instagram" href="/auth/instagram">
+				<i class="fa fa-instagram"></i> Sign in with Instagram
+			</a>
+		</div>
+	</div>
+</div>
