--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,6 +27,7 @@
       <script src="js/eventhandler.js"></script>
       <script type="text/javascript" src="js/headroom.min.js"></script>
       <link rel="import" href="components/paper-card.html">
+      <link rel="import" href="components/paper-message.html">
 </head>
 
 <body>
