--- a/views/facebookaccount.handlebars
+++ b/views/facebookaccount.handlebars
@@ -1,4 +1,34 @@
-<div class="titlelabel">	
+<div id="global">
+	<div id="mainContainer">
+		<div class="titlelabel">
+		</div>
+		<div class="subtitle">
+			<div id="songid">
+				<div id="songheader"><span id="spanheader">{{user.displayName}}</span> based on your feed you match the song...</div>
+				<div id="songtitle">{{song.song}}</div>
+				<img id="drakeimg" src="assets/emotional.jpg" data-toggle="tooltip" data-placement="right" title="{{song.text}}">
+			</div>
+		</div>
+		<div class="igContainer">
+			{{#each data.posts}}
+				<div class="igItem" tabindex="0" role="button" data-toggle="popover" data-trigger="focus" data-content="{{emotion}}">
+					<p>aaaa{{picture}}</p>
+					{{#if picture}}
+						<paper-card enableHover="true" overlayImage="{{picture}}" style="width:350px; height:auto;" id="card_{{id}}" caption="{{message}}" author={{user.displayName}}></paper-card>
+					{{else}}
+						<div class="fbmessage">
+							<paper-message enableHover="true" style="width:350px; height:auto;" id="card_{{id}}" caption="{{message}}" author="{{user.displayName}}"></paper-message>
+						</div>
+					{{/if}}
+				</div>
+			{{/each}}
+		</div>
+	</div>
+</div>
+
+
+
+{{!-- <div class="titlelabel">	
 	<p>drake x {{user.displayName}}</p>
 </div>
 <div class="subtitle">
@@ -21,4 +51,4 @@
 {{#each data.posts}}
   <img src="{{picture}}" class="img-responsive" class="img hashtag-img">
   <p>{{message}}</p>
-{{/each}}
+{{/each}} --}}
