--- a/public/components/paper-card.html
+++ b/public/components/paper-card.html
@@ -43,6 +43,8 @@
       padding:0;
       margin-left: auto;
       margin-right: auto;
+      max-width:100%;
+      max-height:100%;
     }
 
     #captionText{
