--- a/public/components/paper-message.html
+++ b/public/components/paper-message.html
@@ -48,16 +48,19 @@
       height: auto;
       vertical-align: text-bottom;
       margin-left: 1em;
-      font-size:18px;
+      font-size:15px;
       font-family: 'Helvetica';
-      line-height: 1.7em;
       color: #333;
+      padding-bottom: 2em;
+      line-height: 1.7em;
     }
 
     #authorText{
       color: #4e5f81;
-      font-size:25px;
-      margin-left: 1em;
+      font-size:20px;
+      padding-left: 10px;
+      margin-bottom: 5px;
+      margin-left: 0.5em;
     }
 
     paper-ripple {
@@ -105,7 +108,6 @@
       <template if="{{!enableOverlay}}">     
         <paper-ripple class="recenteringTouch"></paper-ripple>
         <div id="authorText">{{author}}</div>
-        <hr>
         <div id="captionText">{{caption}}</div>
       </template>
       <content></content>
