--- a/views/facebookaccount.handlebars
+++ b/views/facebookaccount.handlebars
@@ -11,7 +11,7 @@
 		</div>
 		<div class="igContainer">
 			{{#each data.posts}}
-				<div class="igItem" tabindex="0" role="button" data-toggle="popover" data-trigger="focus" data-content="{{emotion}}">
+				<div class="igItem" data-toggle="tooltip" data-placement="right" title="{{emotion}}">
 					{{#if picture}}
 						<paper-card enableHover="true" overlayImage="{{picture}}" style="width:350px; height:auto;" id="card_{{id}}" caption="{{message}}" author={{author}}></paper-card>
 					{{else}}
